--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,13 @@
 <h1>Shopping Product Page</h1>
 
+<nav>
+  <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Cart</a></li>
+      <li><a href="#">Checkout</a></li>
+  </ul>
+</nav>
+
 <h5>Name: </h5>
 <p>Aulia Rizqi Hidayatunnisa</p> <!-- Ubahlah sesuai dengan nama kamu -->
 <h5>Class: </h5>
@@ -7,26 +15,34 @@
 <h5>Student NPM: </h5>
 <p>2206817881</p>
 
-<p>{{result}}</p>
 
   <table border="2", bordercolor="blue">
     <tr>
-      <th>name</th>
-      <th>amount</th>
-      <th>description</th>
-      <th>price</th>
+      <th>Name</th>
+      <th>Amount</th>
+      <th>Description</th>
+      <th>Price</th>
      
     </tr>
-    {% comment %} Add the data below this line {% endcomment %}
-    {% for barang in list_barang %}
-        <tr>
-            <th>{{barang.name}}</th>
-            <th>{{barang.amount}}</th>
-            <th>{{barang.description}}</th>
-            <th>{{barang.price}}</th>
-            
-        </tr>
-    {% endfor %}
-  </table>
+  </tr>
+  <tr>
+      <td>Hoodie</td>
+      <td>10</td>
+      <td>Hoodie bahan Fleece Cotton tersedia warna merah dan kuning</td>
+      <td>Rp149.999</td>
+  </tr>
+  <tr>
+      <td>Jaket Bomber</td>
+      <td>25</td>
+      <td>Jaket berbahan Taslan tersedia warna hitam dan abu-abu</td>
+      <td>Rp179.999</td>
+  </tr>
+  <tr>
+      <td>Sweater</td>
+      <td>20</td>
+      <td>Sweater berbahan Fleece Cotton tersedia warna beige</td>
+      <td>Rp169.999</td>
+  </tr>
+</table>
 
  
