--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,8 @@
 <h1>Shopping Product Page</h1>
 
+<p><strong>Apa Itu Shopping Product?</strong></p>
+<p>Tempat dimana kamu bisa beli jaket-jaketan!</p>
+
 <nav>
   <ul>
       <li><a href="#">Home</a></li>
@@ -14,6 +17,7 @@
 <p>PBP B</p> <!-- Ubahlah sesuai dengan kelas kamu -->
 <h5>Student NPM: </h5>
 <p>2206817881</p>
+
 
 
   <table border="2", bordercolor="blue">
