--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -6,7 +6,34 @@
 
 {% block content %}  
 
-<div class = "login">
+<style>
+    /* Tambahkan CSS kustom untuk tampilan registrasi di sini */
+    .register {
+        background-color: #ffc0cb; /* Warna latar belakang */
+        text-align: center;
+        padding: 20px;
+    }
+
+    .register-form {
+        background-color: #ff69b4; /* Warna latar belakang formulir */
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        max-width: 300px; /* Lebar maksimum formulir */
+        margin: 0 auto; /* Tengahkan formulir */
+    }
+
+    .form-group {
+        margin-bottom: 10px;
+    }
+
+    .register-btn {
+        background-color: #b22222; /* Warna tombol registrasi */
+        color: #ffffff; /* Warna teks tombol */
+    }
+</style>
+
+<div class = "register">
     
     <h1>Register</h1>  
 
