--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -87,7 +87,7 @@
   <div class="card border-success mb-3" style="width: 100%; background-color: #E75480;">
     <div class="card-header bg-transparent border-success">SELAMAT BERBELANJA JAKET!</div>
     <div class="card-body text-success">
-      <h5 class="card-title">Tersedia berbagai jenis jaket</h5>
+      <h5 class="card-title">Tersedia berbagai jenis jaket, sepatu, tas, hoodie, dan lainnya</h5>
       <p class="card-text">Jaket kualitas tinggi dengan bahan yang terjamin nyaman dengan harga yang terjangkau</p>
     </div>
     <div class="card-footer bg-transparent border-success"></div>
